<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort_name"
        android:title="@string/action_sort_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_date"
        android:title="@string/action_sort_date"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_none"
        android:title="@string/action_sort_none"
        app:showAsAction="never" />
</menu> 